Regression: Canceling vertex crease operation causes crash when mesh has vertex groups #103783

Closed
opened 2023-01-10 15:00:52 +01:00 by Dvorakir · 11 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.3, 3.5.0
Worked: version: 3.2.1
Caused by d14c2d549b

Short description of error
When a mesh has one or more vertex groups with vertices assigned to them, canceling a vertex crease operation will cause a crash either immediately or when changing modes

Exact steps for others to reproduce the error
From the default file:

  1. give the cube a vertex group
  2. enter edit mode and assign vertices to the group
  3. do vertex crease but cancel the operation by right clicking
  4. blender crashes when going back to object mode
    blender_2023-01-10_14-53-03.mp4

If the object has a subdivision modifier active, the crash happens immediately on canceling vertex crease:
blender_2023-01-10_14-54-12.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.3, 3.5.0 Worked: version: 3.2.1 Caused by d14c2d549b **Short description of error** When a mesh has one or more vertex groups with vertices assigned to them, canceling a vertex crease operation will cause a crash either immediately or when changing modes **Exact steps for others to reproduce the error** From the default file: 1. give the cube a vertex group 2. enter edit mode and assign vertices to the group 3. do vertex crease but cancel the operation by right clicking 4. blender crashes when going back to object mode [blender_2023-01-10_14-53-03.mp4](https://archive.blender.org/developer/F14137586/blender_2023-01-10_14-53-03.mp4) If the object has a subdivision modifier active, the crash happens immediately on canceling vertex crease: [blender_2023-01-10_14-54-12.mp4](https://archive.blender.org/developer/F14137592/blender_2023-01-10_14-54-12.mp4)
Author

Added subscriber: @Dvorakir

Added subscriber: @Dvorakir

Added subscriber: @manjunath_shiva

Added subscriber: @manjunath_shiva
Manjunath Janardhan self-assigned this 2023-01-10 16:45:35 +01:00

When canceled ,it crashes in below line since dvert->dw is NULL
memcpy(dw, dvert->dw, dvert->totweight * sizeof(*dw));

The Proposed fix is to add additional NULL check for dvert->dw

if (dvert->totweight && dvert->dw) {

When canceled ,it crashes in below line since dvert->dw is NULL memcpy(dw, dvert->dw, dvert->totweight * sizeof(*dw)); The Proposed fix is to add additional NULL check for dvert->dw if (dvert->totweight && dvert->dw) {
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can confirm the crash.
@manjunath_shiva, do you plan to submit the fix?

Stack trace:
VCRUNTIME140.dll    :0x00007FF872C01310  memcpy
blender.exe         :0x00007FF7F21AC460  layerCopy_mdeformvert C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.cc:214
blender.exe         :0x00007FF7F21B4510  CustomData_from_bmesh_block C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.cc:4195
blender.exe         :0x00007FF7F24BEF60  BM_mesh_bm_to_me_for_eval C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\bmesh\intern\bmesh_mesh_convert.cc:1329
blender.exe         :0x00007FF7F2256310  BKE_mesh_wrapper_ensure_mdata C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\mesh_wrapper.cc:105
blender.exe         :0x00007FF7F214C2D0  BKE_modifier_modify_mesh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\modifier.cc:1002
blender.exe         :0x00007FF7F2300650  modifier_modify_mesh_and_geometry_set C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:611
blender.exe         :0x00007FF7F22FE250  editbmesh_calc_modifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1431
blender.exe         :0x00007FF7F22FE090  editbmesh_build_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1625
blender.exe         :0x00007FF7F2301210  makeDerivedMesh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1740
blender.exe         :0x00007FF7F2320F20  BKE_object_handle_data_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:165
blender.exe         :0x00007FF7F2320D80  BKE_object_eval_uber_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:331
blender.exe         :0x00007FF7F2540D30  blender::deg::`anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:108
blender.exe         :0x00007FF7F2540B60  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:121
blender.exe         :0x00007FF7F319E840  BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471
blender.exe         :0x00007FF7F2540810  blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305
blender.exe         :0x00007FF7F2540B60  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:124
blender.exe         :0x00007FF7F319E840  BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471
blender.exe         :0x00007FF7F2540810  blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305
blender.exe         :0x00007FF7F2540B60  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:124
blender.exe         :0x00007FF7F319E840  BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471
blender.exe         :0x00007FF7F2540810  blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95
blender.exe         :0x00007FF7F2540DD0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298
blender.exe         :0x00007FF7F2540F70  blender::deg::`anonymous namespace'::schedule_graph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:290
blender.exe         :0x00007FF7F2540BD0  blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:323
blender.exe         :0x00007FF7F2540860  blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:446
blender.exe         :0x00007FF7F2178320  scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2686
blender.exe         :0x00007FF7F20B49D0  wm_event_do_notifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:694
blender.exe         :0x00007FF7F2099C40  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:646
blender.exe         :0x00007FF7F2095240  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:590
blender.exe         :0x00007FF7F32AF924  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF87B275590  BaseThreadInitThunk
ntdll.dll           :0x00007FF87C0C4830  RtlUserThreadStart```
Hi, thanks for the report. Can confirm the crash. @manjunath_shiva, do you plan to submit the fix? ```lines=10 Stack trace: VCRUNTIME140.dll :0x00007FF872C01310 memcpy blender.exe :0x00007FF7F21AC460 layerCopy_mdeformvert C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.cc:214 blender.exe :0x00007FF7F21B4510 CustomData_from_bmesh_block C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.cc:4195 blender.exe :0x00007FF7F24BEF60 BM_mesh_bm_to_me_for_eval C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\bmesh\intern\bmesh_mesh_convert.cc:1329 blender.exe :0x00007FF7F2256310 BKE_mesh_wrapper_ensure_mdata C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\mesh_wrapper.cc:105 blender.exe :0x00007FF7F214C2D0 BKE_modifier_modify_mesh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\modifier.cc:1002 blender.exe :0x00007FF7F2300650 modifier_modify_mesh_and_geometry_set C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:611 blender.exe :0x00007FF7F22FE250 editbmesh_calc_modifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1431 blender.exe :0x00007FF7F22FE090 editbmesh_build_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1625 blender.exe :0x00007FF7F2301210 makeDerivedMesh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1740 blender.exe :0x00007FF7F2320F20 BKE_object_handle_data_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:165 blender.exe :0x00007FF7F2320D80 BKE_object_eval_uber_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:331 blender.exe :0x00007FF7F2540D30 blender::deg::`anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:108 blender.exe :0x00007FF7F2540B60 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:121 blender.exe :0x00007FF7F319E840 BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471 blender.exe :0x00007FF7F2540810 blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305 blender.exe :0x00007FF7F2540B60 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:124 blender.exe :0x00007FF7F319E840 BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471 blender.exe :0x00007FF7F2540810 blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:305 blender.exe :0x00007FF7F2540B60 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:124 blender.exe :0x00007FF7F319E840 BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471 blender.exe :0x00007FF7F2540810 blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95 blender.exe :0x00007FF7F2540DD0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:298 blender.exe :0x00007FF7F2540F70 blender::deg::`anonymous namespace'::schedule_graph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:290 blender.exe :0x00007FF7F2540BD0 blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:323 blender.exe :0x00007FF7F2540860 blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:446 blender.exe :0x00007FF7F2178320 scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2686 blender.exe :0x00007FF7F20B49D0 wm_event_do_notifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:694 blender.exe :0x00007FF7F2099C40 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:646 blender.exe :0x00007FF7F2095240 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:590 blender.exe :0x00007FF7F32AF924 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF87B275590 BaseThreadInitThunk ntdll.dll :0x00007FF87C0C4830 RtlUserThreadStart```
Pratik Borhade changed title from Canceling vertex crease operation causes crash when mesh has vertex groups to Regression: Canceling vertex crease operation causes crash when mesh has vertex groups 2023-01-11 04:41:50 +01:00
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Crash caused by d14c2d549b
@mano-wii ^

Crash caused by d14c2d549b @mano-wii ^

Hi Pratik ,
yes, I have fix and tested it! Will submit the code changes.

Thanks,
Manjunath

Hi Pratik , yes, I have fix and tested it! Will submit the code changes. Thanks, Manjunath

This issue was referenced by 3b761901b6

This issue was referenced by 3b761901b6d6d5c089a89d0df9d8d12fd7f8e368

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103783
No description provided.