Fix T103783: crash when canceling vertex crease having vertex groups

`transdata_restore_basic` uses `copy_v3_v3` to restore a pointer that is 1D.